--- a/anime.css
+++ b/anime.css
@@ -7,7 +7,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   overflow-x: scroll;
-  justify-content: stretch;
+  justify-content: start;
 }
 
 .kemicofa-row::-webkit-scrollbar {
@@ -31,7 +31,7 @@
 
 
 .kemicofa-row > * {
-  flex-basis: 20rem;
+  flex-basis: 26rem;
   flex-shrink: 0;
 }
 
@@ -42,7 +42,7 @@
   border-radius: 2rem 2rem 1.5rem 1.5rem;
   background: linear-gradient(60deg, #01060f 0%, #414c58 100%);
   margin: 1rem 1rem 1rem 0rem!important;
-  box-shadow: 2px 4px #999;
+  box-shadow: 0px 4px rgb(26, 22, 22);
 
 }
 
@@ -63,7 +63,7 @@
 }
 
 .synopsis {
-  font-size: 13.5px;
+  font-size: 15px;
 }
 
 
